Split admin and public apps
* Remove staging and testing environments.
* Use the `dev` branch as default for development.
* Build separate docker images for admin and public apps. Use separate
  requirements files, Dockerfile, but the same setup.py.
* Update README.rst to reflect the current deployment scenario.
* Refresh dependencies.
* Move public code to a separate package in the same namespace
  (shipit_api).
* Extract some model methods into functions, so the models can be used
  by the public app without methods that modify the database.
* Move `Product` and `ProductCategory` enums to a separate module.
